--- a/app/src/main/res/layout/item_plan.xml
+++ b/app/src/main/res/layout/item_plan.xml
@@ -3,19 +3,36 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/parentLl"
+    >
 
     <TextView
         android:id="@+id/destinationTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:text="여행지" />
+        android:text="여행지"
+        android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/dateTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="날짜" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/departureDateTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="출발 날짜"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/endDateTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:text="도착 날짜"
+            android:textSize="16sp"/>
+    </LinearLayout>
+
 </LinearLayout>
