--- a/app/src/main/res/layout/activity_plan.xml
+++ b/app/src/main/res/layout/activity_plan.xml
@@ -24,4 +24,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="도착 날짜" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/dayRv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
