--- a/app/src/main/res/layout/activity_search_destination.xml
+++ b/app/src/main/res/layout/activity_search_destination.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchDestinationActivity">
+    tools:context=".Search.SearchDestinationActivity">
 
     <fragment
         android:id="@+id/map"
